# Docforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
backend/: .dockerignore  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/adapters/export/: _prosemirror.py  docx.py  libreoffice.py  markdown.py  pdf.py
backend/adapters/llm/: _openai_compat.py  anthropic.py  deepseek.py  embeddings.py  factory.py  ollama.py  openai.py  utils.py
backend/adapters/minio/: storage.py
backend/adapters/ocr/: tesseract.py
backend/adapters/parsers/: docx.py  pdf.py
backend/adapters/postgresql/: base.py  models.py  pgvector.py  repositories.py
backend/adapters/redis/: client.py
backend/api/: app.py  upload_validation.py
backend/api/middleware/: auth.py
backend/api/routes/: auth.py  chat.py  comments.py  documents.py  drafts.py  exports.py  patches.py  sources.py  templates.py  validation.py
backend/api/schemas/: auth.py  chat.py  document.py  drafts.py  exports.py  patches.py  validation.py
backend/config/: logging.py  settings.py
backend/core/: doc_types.py  events.py
backend/core/models/: chat.py  document.py  patch.py  tenant.py  user.py
backend/core/schemas/: document_schema.py
backend/core/services/: agent.py  chunking.py  context.py  diff.py  drafting.py  export.py  extraction.py  intent.py  patching.py  scoring.py  search.py  slot_retrieval.py  slot_schema.py  validation.py
backend/core/slot_schemas/: company_profile.yaml  contract.yaml  nda.yaml  service_sheet.yaml  technical_doc.yaml
backend/ports/: embeddings.py  llm.py
backend/tests/: conftest.py  helpers.py
backend/tests/adapters/: test_docx_export.py  test_libreoffice_export.py  test_llm_contract.py  test_markdown_export.py  test_pgvector.py  (+2 more)
backend/workers/: celery_app.py  classification.py  db.py  drafting.py  export.py  patching.py  validation.py
(+168 files in other folders)
