[project]
name = "docforge-backend"
version = "0.1.0"
description = "DocForge API Backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", "migrations"]

[tool.coverage.run]
source = ["core", "api", "adapters"]
